# chatbot_llama2_mta

./: .gitignore  README.md  config.py  ingest.py  model.py  pyproject.toml
data/: quydinh2053.docx
vectorstore/db_faiss/: index.faiss  index.pkl
