[tool.poetry]
name = "llama2-medical-chatbot"
version = "0.1.0"
description = ""
authors = ["manhtd98 <manhtd6932@seta-international.vn>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pypdf = "^3.17.1"
langchain = "^0.0.340"
torch = "^2.1.1"
accelerate = "^0.24.1"
bitsandbytes = "^0.41.2.post2"
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
chainlit = "^0.7.604"
huggingface-hub = "^0.19.4"
ctransformers = "^0.2.27"
docx2txt = "^0.8"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
